fix & update SqlStorage
- fix get(), getAllSorted(), insertContacts(), insertSections(),
      addContact().
- update addSection().